import "systematic/program.proto";

package systematic;

message ChessPorProto {
  message VisitedStateProto {
    required uint32 hash_val = 1;
    required uint32 preemptions = 2;
    required uint32 exec_id = 3;
    required uint32 state_idx = 4;
  }
  required uint32 num_execs = 1;
  repeated VisitedStateProto visited_state = 2;
}

